--- a/forgot-mpin.html
+++ b/forgot-mpin.html
@@ -49,12 +49,12 @@ const $=s=>document.querySelector(s); const msg=t=>$('#msg').textContent=t||'';
 $('#send').onclick=async()=>{
   msg(''); const phone=$('#phone').value.trim();
   if(!/^\d{10}$/.test(phone)) return msg('Enter 10-digit phone');
-  const r=await fetch('forgot_send_sms.php',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({phone})});
+  const r=await fetch('/config/forgot_send_sms.php',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({phone})});
   const d=await r.json(); if(!d.success) return msg(d.error||'Send failed'); $('#step2').style.display='block';
 };
 $('#verify').onclick=async()=>{
   const phone=$('#phone').value.trim(); const code=$('#otp').value.trim();
-  const r=await fetch('forgot_verify_sms.php',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({phone,code})});
+  const r=await fetch('/config/forgot_verify_sms.php',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({phone,code})});
   const d=await r.json(); if(!d.success) return msg(d.error||'Invalid OTP');
   $('#tick').style.display='inline'; $('#step3').style.display='block';
 };
@@ -62,7 +62,7 @@ $('#set').onclick=async()=>{
   const phone=$('#phone').value.trim(); const mpin=$('#mpin').value.trim(); const mpin2=$('#mpin2').value.trim();
   if(!/^\d{4,6}$/.test(mpin)) return msg('mPIN must be 4–6 digits');
   if(mpin!==mpin2) return msg('mPINs do not match');
-  const r=await fetch('reset_mpin.php',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({phone,mpin})});
+  const r=await fetch('/config/reset_mpin.php',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({phone,mpin})});
   const d=await r.json(); if(!d.success) return msg(d.error||'Reset failed');
   location.href='index.html';
 };
