--- a/forgot-mpin.html
+++ b/forgot-mpin.html
@@ -44,28 +44,34 @@
     <input id="mpin2" type="password" inputmode="numeric" maxlength="6" pattern="\d{4,6}">
     <button id="set">Reset mPIN</button><!--you can change your mpin by clicking it-->
   </div>
+<!-- forgot-mpin.html -->
 <script>
-const $=s=>document.querySelector(s); const msg=t=>$('#msg').textContent=t||'';
-$('#send').onclick=async()=>{
-  msg(''); const phone=$('#phone').value.trim();
-  if(!/^\d{10}$/.test(phone)) return msg('Enter 10-digit phone');
-  const r=await fetch('/config/forgot_send_sms.php',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({phone})});
-  const d=await r.json(); if(!d.success) return msg(d.error||'Send failed'); $('#step2').style.display='block';
-};
-$('#verify').onclick=async()=>{
-  const phone=$('#phone').value.trim(); const code=$('#otp').value.trim();
-  const r=await fetch('/config/forgot_verify_sms.php',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({phone,code})});
-  const d=await r.json(); if(!d.success) return msg(d.error||'Invalid OTP');
-  $('#tick').style.display='inline'; $('#step3').style.display='block';
-};
-$('#set').onclick=async()=>{
-  const phone=$('#phone').value.trim(); const mpin=$('#mpin').value.trim(); const mpin2=$('#mpin2').value.trim();
-  if(!/^\d{4,6}$/.test(mpin)) return msg('mPIN must be 4–6 digits');
-  if(mpin!==mpin2) return msg('mPINs do not match');
-  const r=await fetch('/config/reset_mpin.php',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({phone,mpin})});
-  const d=await r.json(); if(!d.success) return msg(d.error||'Reset failed');
-  location.href='index.html';
-};
+async function sendOTP(phone){
+  const r = await fetch('/config/sms_otp.php',{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({action:'send',phone})
+  });
+  return await r.json();
+}
+
+async function verifyOTP(phone,code){
+  const r = await fetch('/config/sms_otp.php',{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({action:'verify',phone,code})
+  });
+  return await r.json();
+}
+
+async function resetMPIN(phone,mpin){
+  const r = await fetch('/config/reset_mpin.php',{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({phone,mpin})
+  });
+  return await r.json();
+}
 </script>
 
     </div>
